organic-farm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farm-ingress
  namespace: multi-farm
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    # Essential for FastAPI behind a proxy
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto $scheme;
spec:
  #ingressClassName: nginx
  tls:
    - hosts:
        - of.kaayaka.in
      secretName: of-kaayaka-tls
  rules:
    - host: of.kaayaka.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /storage
            pathType: Prefix
            backend:
              service:
                name: minio-service
                namespace: infra # Cross-namespace routing to MinIO
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
